--- a/html-homework3.html
+++ b/html-homework3.html
@@ -35,7 +35,7 @@
     <br><br>
 
     <label for="email">Email:-</label>
-    <input type="email" name="email" id="">
+    <input type="email" name="email" id="" value="abc@gmail.com">
     <br><br>
 
     <label for="dob">DOB:-</label>
