--- a/test3.html
+++ b/test3.html
@@ -20,7 +20,7 @@
             nav {
                 background-color: rgba(0, 0, 0, 1);
                 text-align: center;
-                padding-block: 6px; position: sticky;
+                padding-block: 10px; position: sticky;
                 top: 0;
                 color: white;
             }
@@ -32,7 +32,7 @@
             nav > input {
                 width: 30%;
                 border: none;
-                font-size: small;
+                font-size: medium;
             }
 
             nav > input:focus {
