--- a/test3.html
+++ b/test3.html
@@ -30,9 +30,9 @@
                 margin-inline: 15px; }
 
             nav > input {
-                width: 20%;
+                width: 30%;
                 border: none;
-                font-size: large;
+                font-size: medium;
             }
 
             nav > input:focus {
