--- a/test3.html
+++ b/test3.html
@@ -20,19 +20,19 @@
             nav {
                 background-color: rgba(0, 0, 0, 1);
                 text-align: center;
-                padding-block: 10px; position: sticky;
+                padding-block: 15px; position: sticky;
                 top: 0;
                 color: white;
             }
 
-            nav > h6 {
+            nav > h5 {
                 display: inline-block;
                 margin-inline: 15px; }
 
             nav > input {
                 width: 30%;
                 border: none;
-                font-size: medium;
+                font-size: large;
             }
 
             nav > input:focus {
@@ -75,8 +75,8 @@
             }
 
             .tr {
-                height: 100px;
-                width: 90px;
+                height: 150px;
+                width: 120px;
                 display: inline-block;
                 background-color: rgba(0, 0, 0, 0.4);
                 color: white;
@@ -109,7 +109,7 @@
             }
 
             .des > h1 {
-                /* font-size: xx-large; */
+                font-size: xx-large;
                 margin-bottom: 30px;
             }
 
@@ -123,8 +123,8 @@
                 position: absolute;
                 right: 10%;
                 top: 20%;
-                width: 200px;
-                height: 200px;
+                width: 300px;
+                height: 300px;
                 border-radius: 50%;
                 box-shadow: 8px 8px 8px white;
             }
@@ -146,12 +146,12 @@
     </div>
 
     <nav>
-        <h6>Men</h6>
-        <h6>Women</h6>
-        <h6>Kids</h6>
-        <h6>Sports</h6>
-        <h6>Brands</h6>
-        <h6>Collection</h6>
+        <h5>Men</h5>
+        <h5>Women</h5>
+        <h5>Kids</h5>
+        <h5>Sports</h5>
+        <h5>Brands</h5>
+        <h5>Collection</h5>
         <input type="text"/>
         <span>🔍</span>
     </nav>
