--- a/test3.html
+++ b/test3.html
@@ -114,9 +114,9 @@
             }
 
             .des > p {
-                font-size: 25px;
+                font-size: xx-large;
                 margin-bottom: 50px;
-                line-height: 30px;
+                line-height: 20px;
             }
 
             .shoe-1 {
