--- a/test3.html
+++ b/test3.html
@@ -109,12 +109,12 @@
             }
 
             .des > h1 {
-                /* font-size: xx-large; */
+                font-size: xx-large;
                 margin-bottom: 30px;
             }
 
             .des > p {
-                font-size: large;
+                font-size: 20px;
                 margin-bottom: 50px;
                 line-height: 20px;
             }
