--- a/test3.html
+++ b/test3.html
@@ -108,13 +108,13 @@
                 color: white;
             }
 
-            .des > h2 {
-                font-size: xx-large;
+            .des > h1 {
+                /* font-size: xx-large; */
                 margin-bottom: 30px;
             }
 
             .des > p {
-                font-size: 18px;
+                font-size: 16px;
                 margin-bottom: 50px;
                 line-height: 20px;
             }
@@ -192,7 +192,7 @@
         <div class="container">
             <div class="shoe" style="background: linear-gradient(to right, #000000, #e74c3c)">
                 <div class="des">
-                    <h2>How did Air Jordan start?</h2>
+                    <h1>How did Air Jordan start?</h1>
                     <p style="margin-top: 20px;">The first Air Jordan shoe was produced for basketball player
         Michael Jordan during his time with the Chicago Bulls in late
         1984 and released to the public on April 1, 1985. The shoes were
