--- a/css-homework1.html
+++ b/css-homework1.html
@@ -18,7 +18,7 @@ body {
       }
 
       h1 {
-        
+        font-size: 55px;
         margin: 0;
       }
 
@@ -78,7 +78,7 @@ body {
             <img
               src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/2560px-Netflix_2015_logo.svg.png"
               width="150"
-              height="60"
+              height="50"
             />
           </div>
           <div id="buttons">
