--- a/test2index.html
+++ b/test2index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <iframe width="20%" height="640vh" src="./test2.html" ></iframe>
-        <iframe width="79%" height="640vh" name="rightpanel" src="https://rudresh303.github.io/classwork-html/"></iframe>
+        <iframe width="79%" height="640vh" name="rightpanel" src="https://priyanshu-240499.github.io/Assignments-CSS/hrml_Day01_Resume.html/resume.html"></iframe>
     </div>
 </body>
 </html>
