--- a/youtube.html
+++ b/youtube.html
@@ -84,7 +84,7 @@
                 <!-- single video is tarting form here -->
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -101,7 +101,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://i.ytimg.com/vi/759S9__g58c/hqdefault.jpg?sqp=-oaymwEcCNACELwBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBj6vPGil2z8Keb7fR1hnefd1ewYQ" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -135,7 +135,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -152,7 +152,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -169,7 +169,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -186,7 +186,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -203,7 +203,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -220,7 +220,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -237,7 +237,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -254,7 +254,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -288,7 +288,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -305,7 +305,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
@@ -322,7 +322,7 @@
                 </div>
                 <div class="video">
                     <div class="video_thumbnail">
-                        <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
+                     <img src="https://img.youtube.com/vi/PpXUTUXU7Qc/maxresdefault.jpg" alt="">
                     </div>
                     <div class="video_details">
                         <div class="author">
