--- a/css-classwork4.html
+++ b/css-classwork4.html
@@ -84,7 +84,7 @@
             Rem, dolore.
           </p>
         </div>
-        <img class="shoe-1" src="./css-classwork4.png" alt="shoe1" />
+        <img class="shoe-1" src="https://priyanshu-240499.github.io/Assignments-CSS/position/assets/shoe-1.png" alt="shoe1" />
       </div>
     </div>
   </body>
