--- a/test2.html
+++ b/test2.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- p tag for writing desciption -->
     <p>Project 1 - Resume</p>
     <hr>
+    <!-- used anchor tag to click and open new HTML page on the right panel -->
+     <!-- The target="rightpanel" attribute in your <a> tags specifies that the linked page should open in an iframe with the name rightpanel -->
     <div><a href="https://rudresh303.github.io/classwork-html/" target="rightpanel">
         <img src="./resume.png" width="100%" height="150px" alt="resume">
     </a></div>
