--- a/test2index.html
+++ b/test2index.html
@@ -11,7 +11,9 @@
     <body oncontextmenu="return false;">
     
     <div class="container">
+        <!--  iframe is used for showing one  webpage in another -->
         <iframe width="20%" height="640vh" src="./test2.html" ></iframe>
+        <!-- This name attribute setup allows the linked pages to load in that specific iframe -->
         <iframe width="79%" height="640vh" name="rightpanel" src="https://rudresh303.github.io/classwork-html/"></iframe>
     </div>
 </body>
