--- a/classwork9.html
+++ b/classwork9.html
@@ -1,4 +1,5 @@
-<html style="height: 100%">
+<!DOCTYPE html>
+<html style="height: 100%" lang="en">
   <head>
     <meta name="viewport" content="width=device-width, minimum-scale=0.1" />
     <title>css-template-preview-110226.webp (800×533)</title>
@@ -7,7 +8,7 @@
     <img
       style="
         display: block;
-        -webkit-user-select: none;
+        
         margin: auto;
         cursor: zoom-out;
         background-color: hsl(0, 0%, 90%);
